--- a/Hiker/Base.lproj/Main.storyboard
+++ b/Hiker/Base.lproj/Main.storyboard
@@ -1,24 +1,170 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gGM-gv-sUB">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--HIKER 🏃‍♂️-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MapViewController" id="BYZ-38-t0r" customClass="MapViewController" customModule="Hiker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" showsPointsOfInterest="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d1b-dR-RnN">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="cUV-OX-xYl"/>
+                                </connections>
+                            </mapView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="d1b-dR-RnN" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="60j-ZT-ISo"/>
+                            <constraint firstItem="d1b-dR-RnN" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="AgL-2l-61J"/>
+                            <constraint firstItem="d1b-dR-RnN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="anq-LS-AT4"/>
+                            <constraint firstItem="d1b-dR-RnN" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="dIq-kh-JXk"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="HIKER 🏃‍♂️" id="ieS-bh-Zk6">
+                        <barButtonItem key="rightBarButtonItem" image="settings" id="W0e-w3-XZF">
+                            <connections>
+                                <segue destination="vwP-el-KB5" kind="presentation" modalPresentationStyle="overFullScreen" id="Hih-lv-3HP"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="mapView" destination="d1b-dR-RnN" id="jIB-D8-wdg"/>
+                        <segue destination="28J-AL-bAT" kind="presentation" identifier="showDetail" id="8Us-eq-RMw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="912.79999999999995" y="-564.46776611694156"/>
+        </scene>
+        <!--Settings View Controller-->
+        <scene sceneID="tXw-Jv-3zd">
+            <objects>
+                <viewController storyboardIdentifier="SettingsViewController" id="vwP-el-KB5" customClass="SettingsViewController" customModule="Hiker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WsZ-Nq-0U8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <visualEffectView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZjD-SI-Zyb">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="yV5-Mn-dNa">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qu7-sz-cIq">
+                                            <rect key="frame" x="324" y="28" width="41" height="33"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <state key="normal" title="Done"/>
+                                            <connections>
+                                                <segue destination="pe1-Xj-X0r" kind="unwind" unwindAction="unwindToMap:" id="rgr-if-wOj"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                </view>
+                                <blurEffect style="light"/>
+                            </visualEffectView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="ZjD-SI-Zyb" secondAttribute="bottom" id="1ew-TI-afb"/>
+                            <constraint firstItem="0ax-8F-L3h" firstAttribute="trailing" secondItem="qu7-sz-cIq" secondAttribute="trailing" constant="10" id="78P-Gg-Apj"/>
+                            <constraint firstItem="qu7-sz-cIq" firstAttribute="top" secondItem="0ax-8F-L3h" secondAttribute="top" constant="8" id="Eo3-CT-KWK"/>
+                            <constraint firstItem="ZjD-SI-Zyb" firstAttribute="top" secondItem="WsZ-Nq-0U8" secondAttribute="top" id="FBe-G6-b2E"/>
+                            <constraint firstAttribute="trailing" secondItem="ZjD-SI-Zyb" secondAttribute="trailing" id="WWp-3v-9qn"/>
+                            <constraint firstItem="ZjD-SI-Zyb" firstAttribute="leading" secondItem="WsZ-Nq-0U8" secondAttribute="leading" id="cfy-zz-Hpn"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="0ax-8F-L3h"/>
+                    </view>
+                    <connections>
+                        <outlet property="blurView" destination="ZjD-SI-Zyb" id="Ocp-u4-qCv"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8jB-0K-V6C" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="pe1-Xj-X0r" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1994" y="-826"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="GGG-wS-vzn">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gGM-gv-sUB" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Sua-WN-dns">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="NqW-iO-VjQ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qcd-zU-vdx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="133.59999999999999" y="-564.46776611694156"/>
+        </scene>
+        <!--Location View Controller-->
+        <scene sceneID="7mC-89-L5J">
+            <objects>
+                <viewController storyboardIdentifier="LocationViewController" id="28J-AL-bAT" customClass="LocationViewController" customModule="Hiker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Li2-O2-2OP">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <visualEffectView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bIR-ij-b63">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Ub9-EC-RWV">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ro7-Lv-Ldi">
+                                            <rect key="frame" x="324" y="28" width="41" height="33"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <state key="normal" title="Done"/>
+                                            <connections>
+                                                <segue destination="xt4-36-NFe" kind="unwind" unwindAction="unwindToMap:" id="jA1-Ep-avt"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                </view>
+                                <blurEffect style="light"/>
+                            </visualEffectView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="bIR-ij-b63" firstAttribute="leading" secondItem="Li2-O2-2OP" secondAttribute="leading" id="ACP-DI-NoB"/>
+                            <constraint firstAttribute="trailing" secondItem="bIR-ij-b63" secondAttribute="trailing" id="Gxu-ZM-ezv"/>
+                            <constraint firstItem="bIR-ij-b63" firstAttribute="top" secondItem="Li2-O2-2OP" secondAttribute="top" id="oE3-0C-x1H"/>
+                            <constraint firstItem="KWy-NP-S1A" firstAttribute="trailing" secondItem="Ro7-Lv-Ldi" secondAttribute="trailing" constant="10" id="oN1-Im-N42"/>
+                            <constraint firstAttribute="bottom" secondItem="bIR-ij-b63" secondAttribute="bottom" id="r92-wP-mgV"/>
+                            <constraint firstItem="Ro7-Lv-Ldi" firstAttribute="top" secondItem="KWy-NP-S1A" secondAttribute="top" constant="8" id="yFm-KH-mwU"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="KWy-NP-S1A"/>
+                    </view>
+                    <connections>
+                        <outlet property="blurView" destination="bIR-ij-b63" id="TFN-9E-ZMW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Uxs-q2-vAZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="xt4-36-NFe" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1993" y="-146"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="settings" width="25" height="25"/>
+    </resources>
+    <color key="tintColor" name="Action"/>
 </document>
